# reqsign

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  licenserc.toml  vercel.json
context/command-execute-tokio/: Cargo.toml
context/command-execute-tokio/src/: lib.rs
context/file-read-tokio/: Cargo.toml  README.md
context/file-read-tokio/examples/: read_credentials.rs
context/file-read-tokio/src/: lib.rs
context/http-send-reqwest/: Cargo.toml  README.md
context/http-send-reqwest/examples/: custom_client.rs
context/http-send-reqwest/src/: lib.rs
core/: Cargo.toml  README.md
core/examples/: custom_signer.rs
core/src/: api.rs  context.rs  env.rs  error.rs  fs.rs  hash.rs  http.rs  lib.rs  request.rs  signer.rs  time.rs  utils.rs
crates/reqsign/: Cargo.toml
crates/reqsign-aws-v4/: Cargo.toml
crates/reqsign-aws-v4/benches/: aws.rs
crates/reqsign-aws-v4/src/: config.rs  credential.rs  lib.rs  signer.rs
crates/reqsign-aws-v4/tests/: main.rs
crates/reqsign-file-read-tokio/: Cargo.toml
crates/reqsign-file-read-tokio/src/: lib.rs
crates/reqsign-http-send-reqwest/: Cargo.toml
crates/reqsign-http-send-reqwest/src/: lib.rs
crates/reqsign-huaweicloud-obs/: Cargo.toml
crates/reqsign-huaweicloud-obs/src/: signer.rs
crates/reqsign-oracle/: Cargo.toml
crates/reqsign-oracle/src/: constants.rs  credential.rs  lib.rs  signer.rs
crates/reqsign/src/: context.rs  ctx.rs  env.rs  fs.rs  hash.rs  http.rs  lib.rs
crates/reqsign/src/aws/: config.rs  credential.rs  v4.rs
crates/reqsign/src/azure/: constants.rs
crates/reqsign/src/google/: mod.rs  token.rs
crates/reqsign/src/oracle/: credential.rs  mod.rs  oci.rs
crates/reqsign/src/sign/: api.rs  mod.rs  signer.rs
crates/reqsign/src/tencent/: cos.rs  mod.rs
crates/reqsign/tests/: main.rs
crates/reqsign/tests/aliyun/: mod.rs
crates/reqsign/tests/aws/: mod.rs
crates/reqsign/tests/tencent/: cos.rs
reqsign/: Cargo.toml  README.md
reqsign/examples/: aws.rs  azure.rs  google.rs
reqsign/src/: aliyun.rs  aws.rs  azure.rs  context.rs  google.rs  huaweicloud.rs  lib.rs  oracle.rs  tencent.rs
services/aws-v4/: Cargo.toml  README.md
services/aws-v4/benches/: aws.rs
services/aws-v4/examples/: chain_logging.rs  custom_chain.rs  dynamodb_sign.rs  s3_express_sign.rs  s3_sign.rs
services/aws-v4/src/: build.rs  config.rs  constants.rs  credential.rs  key.rs  lib.rs  sign_request.rs
services/aws-v4/src/load/: assume_role.rs  assume_role_with_web_identity.rs  config.rs  default.rs  imds.rs  mod.rs  utils.rs
services/aws-v4/src/provide_credential/: assume_role.rs  assume_role_with_web_identity.rs  chain.rs  cognito.rs  config.rs  default.rs  ecs.rs  env.rs  imds.rs  mod.rs  process.rs  profile.rs  s3_express_session.rs  sso.rs  static.rs  utils.rs
services/aws-v4/testdata/: default_config
services/aws-v4/tests/: README.md  credential_chain.rs  main.rs  test_new_providers.rs
services/aws-v4/tests/credential_providers/: assume_role.rs  assume_role_with_web_identity.rs  cognito.rs  ecs.rs  env.rs  imds.rs  mod.rs  process.rs  profile.rs  s3_express.rs  sso.rs
services/aws-v4/tests/mocks/: README.md  cognito_mock_server.py  credential_process_helper.py  ecs_mock_server.py  imds_mock_server.py  sso_mock_server.py
services/aws-v4/tests/signing/: mod.rs  presigned.rs  special_chars.rs  standard.rs
services/azure-storage/: Cargo.toml  README.md
services/azure-storage/examples/: blob_storage.rs
services/azure-storage/src/: account_sas.rs  build.rs  client_secret_credential.rs  config.rs  connection_string.rs  constants.rs  credential.rs  key.rs  lib.rs  loader.rs  sign_request.rs  signer.rs
services/azure-storage/src/load/: client_secret.rs  config.rs  default.rs  imds.rs  mod.rs  workload_identity.rs
services/azure-storage/src/provide_credential/: azure_cli.rs  azure_pipelines.rs  client_certificate.rs  client_secret.rs  config.rs  default.rs  env.rs  imds.rs  mod.rs  static_provider.rs  workload_identity.rs
services/azure-storage/tests/: README.md  credential_chain.rs  main.rs
services/azure-storage/tests/credential_providers/: azure_cli.rs  azure_pipelines.rs  client_certificate.rs  client_secret.rs  default.rs  env.rs  imds.rs  mod.rs  static_provider.rs  workload_identity.rs
services/azure-storage/tests/mocks/: imds_mock.py  imds_mock_server.py  oauth_mock_server.py
services/azure-storage/tests/signing/: mod.rs  sas_token.rs  shared_key.rs
services/google/: Cargo.toml
services/google/examples/: chain_logging.rs  custom_chain.rs
services/google/src/: build.rs  config.rs  constants.rs  credential.rs  key.rs  lib.rs  sign_request.rs  token.rs
services/google/src/load/: authorized_user.rs  config.rs  default.rs  external_account.rs  impersonated_service_account.rs  mod.rs  service_account.rs  vm_metadata.rs
services/google/src/oauth2/: helpers.rs  mod.rs  types.rs
services/google/src/provide_credential/: authorized_user.rs  config.rs  default.rs  external_account.rs  impersonated_service_account.rs  mod.rs  static_provider.rs  vm_metadata.rs
services/google/src/token/: external_account.rs  impersonated_service_account.rs
services/google/tests/: README.md  credential_chain.rs  main.rs
services/google/tests/credential_providers/: authorized_user.rs  default.rs  external_account.rs  impersonated_service_account.rs  mod.rs  static_provider.rs  vm_metadata.rs
services/google/tests/mocks/: vm_metadata_mock_server.py
services/google/tests/signing/: mod.rs  signed_url.rs  standard.rs
services/oracle/: Cargo.toml
services/oracle/examples/: oracle_chain_logging.rs
services/oracle/src/: build.rs  config.rs  constants.rs  credential.rs  key.rs  lib.rs  sign_request.rs
services/oracle/tests/: credential_chain.rs
services/tencent-cos/: Cargo.toml
services/tencent-cos/examples/: tencent_chain_logging.rs
services/tencent-cos/src/: build.rs  config.rs  constants.rs  credential.rs  key.rs  lib.rs  sign_request.rs
services/tencent-cos/testdata/: .gitignore
services/tencent-cos/tests/: credential_chain.rs  main.rs
(+226 files in other folders)
