[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
categories = ["command-line-utilities", "web-programming"]
description = "Signing API requests without effort."
documentation = "https://docs.rs/reqsign"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/reqsign"
