[workspace]
members = ["core", "context/*", "services/*"]
resolver = "2"

[workspace.package]
categories = ["command-line-utilities", "web-programming"]
description = "Signing API requests without effort."
documentation = "https://docs.rs/reqsign"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/reqsign"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4.35"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
dotenv = "0.15"
env_logger = "0.11"
form_urlencoded = "1"
hex = "0.4"
hmac = "0.12"
home = "0.5"
http = "1"
log = "0.4"
macro_rules_attribute = "0.2.0"
once_cell = "1"
percent-encoding = "2"
pretty_assertions = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.9.0"
reqsign-core = { version = "0.16", path = "core" }
reqwest = { version = "0.12", default-features = false }
rsa = { version = "0.9.2", features = ["pkcs5", "sha2"] }
rust-ini = { version = "0.21" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
temp-env = "0.3"
tempfile = "3.8"
test-case = "3.3.1"
tokio = { version = "1" }
toml = { version = "0.8.9" }
