# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["core", "context/*", "services/*", "reqsign"]
resolver = "2"

[workspace.package]
categories = ["command-line-utilities", "web-programming"]
description = "Signing API requests without effort."
documentation = "https://docs.rs/reqsign"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/reqsign"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4.35"
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
dotenv = "0.15"
env_logger = "0.11"
form_urlencoded = "1"
hex = "0.4"
hmac = "0.12"
home = "0.5"
http = "1"
log = "0.4"
macro_rules_attribute = "0.2.0"
once_cell = "1"
percent-encoding = "2"
pretty_assertions = "1.3"
quick-xml = { version = "0.38.1", features = ["serialize"] }
rand = "0.8.5"
reqsign-aliyun-oss = { version = "1.0.0", path = "services/aliyun-oss" }
reqsign-aws-v4 = { version = "1.0.0", path = "services/aws-v4" }
reqsign-azure-storage = { version = "1.0.0", path = "services/azure-storage" }
reqsign-command-execute-tokio = { version = "1.0.0", path = "context/command-execute-tokio" }
reqsign-core = { version = "1.0.0", path = "core" }
reqsign-file-read-tokio = { version = "1.0.0", path = "context/file-read-tokio" }
reqsign-google = { version = "1.0.0", path = "services/google" }
reqsign-http-send-reqwest = { version = "1.0.0", path = "context/http-send-reqwest" }
reqsign-huaweicloud-obs = { version = "1.0.0", path = "services/huaweicloud-obs" }
reqsign-oracle = { version = "1.0.0", path = "services/oracle" }
reqsign-tencent-cos = { version = "1.0.0", path = "services/tencent-cos" }
reqwest = { version = "0.12", default-features = false }
rsa = { version = "0.9.2", features = ["pkcs5", "sha2"] }
rust-ini = { version = "0.21" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
temp-env = "0.3"
tempfile = "3.8"
test-case = "3.3.1"
thiserror = "2"
tokio = { version = "1", default-features = false }
