[package]
name = "reqsign-core"
version = "1.0.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
form_urlencoded.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
log.workspace = true
percent-encoding.workspace = true
sha1.workspace = true
sha2.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_Com",
] }

[dev-dependencies]
reqsign-file-read-tokio = { path = "../context/file-read-tokio" }
reqsign-http-send-reqwest = { path = "../context/http-send-reqwest" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
