[package]
name = "reqsign"
version = "0.17.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

categories = ["authentication", "web-programming::http-client"]
description = "Signing HTTP requests for AWS, Azure, Google, Huawei, Aliyun, Tencent and Oracle services"
keywords = ["http", "requests", "signing", "aws", "azure"]

[dependencies]
# Core functionality (always included)
reqsign-core = { version = "1.0.0", path = "../core" }

# Service implementations (optional)
reqsign-aliyun-oss = { version = "1.0.0", path = "../services/aliyun-oss", optional = true }
reqsign-aws-v4 = { version = "1.0.0", path = "../services/aws-v4", optional = true }
reqsign-azure-storage = { version = "1.0.0", path = "../services/azure-storage", optional = true }
reqsign-google = { version = "1.0.0", path = "../services/google", optional = true }
reqsign-huaweicloud-obs = { version = "1.0.0", path = "../services/huaweicloud-obs", optional = true }
reqsign-oracle = { version = "1.0.0", path = "../services/oracle", optional = true }
reqsign-tencent-cos = { version = "1.0.0", path = "../services/tencent-cos", optional = true }

# Context implementations (optional but included by default)
reqsign-file-read-tokio = { version = "1.0.0", path = "../context/file-read-tokio", optional = true }
reqsign-http-send-reqwest = { version = "1.0.0", path = "../context/http-send-reqwest", optional = true }

# Direct dependencies for default context
anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }
tokio = { version = "1", optional = true, features = [] }

[features]
default = ["default-context"]
default-context = [
  "dep:anyhow",
  "dep:async-trait",
  "dep:bytes",
  "dep:http",
  "dep:reqwest",
  "dep:tokio",
  "dep:home",
]

# Service features
aliyun = ["dep:reqsign-aliyun-oss"]
aws = ["dep:reqsign-aws-v4"]
azure = ["dep:reqsign-azure-storage"]
google = ["dep:reqsign-google"]
huaweicloud = ["dep:reqsign-huaweicloud-obs"]
oracle = ["dep:reqsign-oracle"]
tencent = ["dep:reqsign-tencent-cos"]

# Full feature set
full = ["aliyun", "aws", "azure", "google", "huaweicloud", "oracle", "tencent"]

# Advanced features for custom context implementations
custom-context = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "aws"
required-features = ["aws", "default-context"]

[[example]]
name = "azure"
required-features = ["azure", "default-context"]

[[example]]
name = "google"
required-features = ["google", "default-context"]
