[package]
name = "reqsign"
version = "0.17.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

categories = ["authentication", "web-programming::http-client"]
description = "Signing HTTP requests for AWS, Azure, Google, Huawei, Aliyun, Tencent and Oracle services"
keywords = ["http", "requests", "signing", "aws", "azure"]

[dependencies]
# Core functionality (always included)
reqsign-core = { version = "1.0.0", path = "../core" }

# Service implementations (optional)
reqsign-aliyun-oss = { version = "1.0.0", path = "../services/aliyun-oss", optional = true }
reqsign-aws-v4 = { version = "1.0.0", path = "../services/aws-v4", optional = true }
reqsign-azure-storage = { version = "1.0.0", path = "../services/azure-storage", optional = true }
reqsign-google = { version = "1.0.0", path = "../services/google", optional = true }
reqsign-huaweicloud-obs = { version = "1.0.0", path = "../services/huaweicloud-obs", optional = true }
reqsign-oracle = { version = "1.0.0", path = "../services/oracle", optional = true }
reqsign-tencent-cos = { version = "1.0.0", path = "../services/tencent-cos", optional = true }

# Context implementations (optional but included by default)
reqsign-command-execute-tokio = { version = "0.1", path = "../context/command-execute-tokio", optional = true }
reqsign-file-read-tokio = { version = "0.1", path = "../context/file-read-tokio", optional = true }
reqsign-http-send-reqwest = { version = "0.1", path = "../context/http-send-reqwest", optional = true }

[features]
default = ["default-context"]
default-context = [
  "dep:reqsign-command-execute-tokio",
  "dep:reqsign-file-read-tokio",
  "dep:reqsign-http-send-reqwest",
]

# Service features
aliyun = ["dep:reqsign-aliyun-oss"]
aws = ["dep:reqsign-aws-v4"]
azure = ["dep:reqsign-azure-storage"]
google = ["dep:reqsign-google"]
huaweicloud = ["dep:reqsign-huaweicloud-obs"]
oracle = ["dep:reqsign-oracle"]
tencent = ["dep:reqsign-tencent-cos"]

# Full feature set
full = ["aliyun", "aws", "azure", "google", "huaweicloud", "oracle", "tencent"]

[dev-dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.11"
http = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "aws"
required-features = ["aws", "default-context"]

[[example]]
name = "azure"
required-features = ["azure", "default-context"]

[[example]]
name = "google"
required-features = ["google", "default-context"]
