[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["asynchronous"]
description = "Tokio-based command execution implementation for reqsign"
edition = "2021"
keywords = ["command", "tokio", "reqsign", "async"]
license = "Apache-2.0"
name = "reqsign-command-execute-tokio"
repository = "https://github.com/causal-agent/reqsign"
version = "1.0.0"

[dependencies]
async-trait = "0.1"
reqsign-core.workspace = true
tokio = { version = "1", features = ["process", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
