# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["asynchronous"]
description = "Tokio-based command execution implementation for reqsign"
edition = "2021"
keywords = ["command", "tokio", "reqsign", "async"]
license = "Apache-2.0"
name = "reqsign-command-execute-tokio"
repository = "https://github.com/Xuanwo/reqsign"
version = "1.0.0"

[dependencies]
async-trait = "0.1"
reqsign-core.workspace = true
tokio = { version = "1", features = ["process", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
