[package]
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
name = "reqsign-file-read-tokio"
repository.workspace = true
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqsign-core.workspace = true
tokio = { version = "1", features = ["fs"] }
