[package]
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
name = "reqsign-file-read-tokio"
repository.workspace = true
version = "1.0.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqsign-core.workspace = true
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
reqsign-http-send-reqwest = { path = "../http-send-reqwest" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
