[package]
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
name = "reqsign-http-send-reqwest"
repository.workspace = true
version = "1.0.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes.workspace = true
http.workspace = true
http-body-util = "0.1.2"
reqsign-core.workspace = true
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
