[package]
name = "reqsign-oracle"
version = "0.1.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
reqsign.workspace = true
rsa.workspace = true
serde.workspace = true
toml.workspace = true


[dev-dependencies]
criterion.workspace = true
dotenv.workspace = true
env_logger.workspace = true
hex.workspace = true
macro_rules_attribute.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
sha2.workspace = true
temp-env.workspace = true
tempfile.workspace = true
test-case.workspace = true
tokio = { workspace = true, features = ["full"] }
