[package]
name = "reqsign-oracle"
version = "0.1.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
reqsign.workspace = true
rsa.workspace = true
serde.workspace = true
toml.workspace = true


[dev-dependencies]
