[package]
name = "reqsign"
version = "0.16.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# services that reqsign supports
services-all = ["services-oracle"]
services-oracle = ["dep:reqwest", "dep:rsa", "dep:toml", "dep:serde"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
form_urlencoded.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
log.workspace = true
once_cell = { workspace = true, optional = true }
percent-encoding.workspace = true
reqwest = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha1.workspace = true
sha2.workspace = true
toml = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home.workspace = true
tokio = { workspace = true, features = ["fs"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
tokio = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
macro_rules_attribute = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
temp-env = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["full"] }
