[package]
name = "reqsign"
version = "0.16.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
form_urlencoded.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
percent-encoding.workspace = true
sha1.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home.workspace = true
tokio = { workspace = true, features = ["fs"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
tokio = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
macro_rules_attribute = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
temp-env = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["full"] }
