[package]
name = "reqsign-azure-storage"
version = "1.0.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
form_urlencoded.workspace = true
http.workspace = true
log.workspace = true
percent-encoding.workspace = true
reqsign-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = "9.2"
pem = "3.0"
rsa.workspace = true

[dev-dependencies]
async-trait.workspace = true
dotenv.workspace = true
env_logger.workspace = true
reqsign-command-execute-tokio.workspace = true
reqsign-file-read-tokio.workspace = true
reqsign-http-send-reqwest.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
