# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "reqsign-azure-storage"
version = "1.0.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
form_urlencoded.workspace = true
http.workspace = true
log.workspace = true
percent-encoding.workspace = true
reqsign-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = "9.2"
pem = "3.0"
rsa.workspace = true

[dev-dependencies]
async-trait.workspace = true
dotenv.workspace = true
env_logger.workspace = true
reqsign-command-execute-tokio.workspace = true
reqsign-file-read-tokio.workspace = true
reqsign-http-send-reqwest.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
