[package]
name = "reqsign-google"
version = "1.0.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
http.workspace = true
jsonwebtoken = "9.2"
log.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqsign-core.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
dotenv.workspace = true
env_logger.workspace = true
pretty_assertions.workspace = true
reqsign-file-read-tokio.workspace = true
reqsign-http-send-reqwest.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
sha2.workspace = true
temp-env.workspace = true
tokio = { workspace = true, features = ["full"] }
