[package]
name = "reqsign-oracle"
version = "0.1.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
rust-ini.workspace = true
log.workspace = true
reqsign-core.workspace = true
rsa.workspace = true
serde.workspace = true


[dev-dependencies]
