[package]
name = "reqsign-oracle"
version = "1.0.0"

categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
reqsign-core.workspace = true
rsa.workspace = true
rust-ini.workspace = true
serde.workspace = true


[dev-dependencies]
env_logger = "0.11"
reqsign-file-read-tokio.workspace = true
reqsign-http-send-reqwest.workspace = true
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
